# kali-docker

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  install.ps1  kali-shortcut.desktop  launch.sh  launch_kali.sh  launch_kali_docker_desktop.sh  launch_kali_docker_engine.sh  setup.sh  tools.txt
docker/: Dockerfile.kali  Dockerfile.kracker  Dockerfile.penbuntu
dotfiles/: .tmux.conf.local
kalictl/: .gitignore  pyproject.toml  requirements.txt
kalictl/src/kalictl/: __init__.py  __main__.py  cli.py  config.py  handler.py
