[tool.poetry]
name = "kalictl"
version = "0.1.0"
description = ""
authors = ["Bhallamudi Sai Narasimha Abhiram <68442741+abhirambsn@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "kalictl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
certifi = " 2023.7.22"
charset-normalizer = " 3.3.1"
click = " 8.1.7"
colorama = " 0.4.6"
docker = " 6.1.3"
idna = " 3.4"
packaging = " 23.2"
requests = " 2.31.0"
shellingham = " 1.5.4"
tabulate = " 0.9.0"
typer = " 0.9.0"
typing-extensions = " 4.8.0"
urllib3 = " 2.0.7"
websocket-client = " 1.6.4"

[tool.poetry.scripts]
kalictl = "kalictl.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
